--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ services:
     - docker build -t xiarnousx/docker-react -f Dockerfile.dev . 
   
   script:
-    - docker run -e CI=true xiarnousx/docker-react npm run test -- --coverage
+    - docker run xiarnousx/docker-react npm run test -- --coverage
   
   
