--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
+language: generic
 sudo: required
 services:
-  - docker
+    - docker
 
+before_install:
+    - docker build -t xiarnousx/docker-react -f Dockerfile.dev .
 
-  before_install:
-    - docker build -t xiarnousx/docker-react -f Dockerfile.dev . 
-  
-  script:
+script:
     - docker run xiarnousx/docker-react npm run test -- --coverage
-  
-  
