--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
     - docker build -t xiarnousx/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run xiarnousx/docker-react npm run test -- --coverage
+    - docker run -e CI=true xiarnousx/docker-react npm run test -- --coverage
